@@ -22,10 +22,12 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 import java.util.UUID;
 import java.util.function.BiConsumer;
 
@@ -55,6 +57,7 @@ import com.dremio.exec.store.iceberg.DremioFileIO;
 import com.dremio.exec.store.iceberg.FieldIdBroker;
 import com.dremio.exec.store.iceberg.IcebergFormatConfig;
 import com.dremio.exec.store.iceberg.IcebergMetadataInformation;
+import com.dremio.exec.store.iceberg.IcebergPartitionData;
 import com.dremio.exec.store.iceberg.IcebergSerDe;
 import com.dremio.exec.store.iceberg.IcebergUtils;
 import com.dremio.exec.store.iceberg.SchemaConverter;
@@ -65,156 +68,167 @@ import com.google.protobuf.InvalidProtocolBufferException;
 import io.protostuff.ByteString;
 
 public class ManifestWritesHelper {
-    private static final Logger logger = LoggerFactory.getLogger(ManifestWritesHelper.class);
+  private static final Logger logger = LoggerFactory.getLogger(ManifestWritesHelper.class);
+  private static final int DATAFILES_PER_MANIFEST_THRESHOLD = 10000;
+  private final String ICEBERG_METADATA_FOLDER = "metadata";
 
-    private final String ICEBERG_METADATA_FOLDER = "metadata";
+  protected ManifestWriter<DataFile> manifestWriter;
+  protected EasyWriter writer;
+  protected IcebergFormatConfig formatConfig;
+  protected long currentNumDataFileAdded = 0;
 
-    protected ManifestWriter<DataFile> manifestWriter;
-    protected EasyWriter writer;
-    protected IcebergFormatConfig formatConfig;
-    protected long currentNumDataFileAdded = 0;
+  protected VarBinaryVector inputDatafiles;
+  protected Map<DataFile, byte[]> deletedDataFiles = new LinkedHashMap<>(); // required that removed file is cleared with each row.
+  protected Optional<Integer> partitionSpecId = Optional.empty();
+  private final Set<IcebergPartitionData> partitionDataInCurrentManifest = new HashSet<>();
+  private final byte[] schema;
 
-    protected VarBinaryVector inputDatafiles;
-    protected Map<DataFile, byte[]> deletedDataFiles = new LinkedHashMap<>(); // required that removed file is cleared with each row.
-    protected Optional<Integer> partitionSpecId = Optional.empty();
+  public static ManifestWritesHelper getInstance(EasyWriter writer, IcebergFormatConfig formatConfig, int columnLimit) {
+    if (writer.getOptions().getIcebergTableProps().isDetectSchema()) {
+      return new SchemaDiscoveryManifestWritesHelper(writer, formatConfig, columnLimit);
+    } else {
+      return new ManifestWritesHelper(writer, formatConfig);
+    }
+  }
 
-    private final byte[] schema;
+  protected ManifestWritesHelper(EasyWriter writer, IcebergFormatConfig formatConfig) {
+    this.writer = writer;
+    this.formatConfig = formatConfig;
+    this.schema = writer.getOptions().getIcebergTableProps().getFullSchema().serialize();
+  }
 
-    public static ManifestWritesHelper getInstance(EasyWriter writer, IcebergFormatConfig formatConfig) {
-        if (writer.getOptions().getIcebergTableProps().isDetectSchema()) {
-            return new SchemaDiscoveryManifestWritesHelper(writer, formatConfig);
-        } else {
-            return new ManifestWritesHelper(writer, formatConfig);
-        }
+  public void setIncoming(VectorAccessible incoming) {
+    inputDatafiles = (VarBinaryVector) getVectorFromSchemaPath(incoming, RecordWriter.ICEBERG_METADATA_COLUMN);
+  }
+
+  public void startNewWriter() {
+    this.currentNumDataFileAdded = 0;
+    final WriterOptions writerOptions = writer.getOptions();
+    final String baseMetadataLocation = writerOptions.getIcebergTableProps().getTableLocation() + Path.SEPARATOR + ICEBERG_METADATA_FOLDER;
+    final FileSystemPlugin<?> plugin = writer.getFormatPlugin().getFsPlugin();
+    final PartitionSpec partitionSpec = getPartitionSpec(writer.getOptions());
+    this.partitionSpecId = Optional.of(partitionSpec.specId());
+    final String icebergManifestFileExt = "." + formatConfig.outputExtension;
+    final DremioFileIO dremioFileIO = new DremioFileIO(plugin.getFsConfCopy());
+    final OutputFile manifestLocation = dremioFileIO.newOutputFile(baseMetadataLocation + Path.SEPARATOR + UUID.randomUUID() + icebergManifestFileExt);
+    partitionDataInCurrentManifest.clear();
+    this.manifestWriter = ManifestFiles.write(partitionSpec, manifestLocation);
+  }
+
+  public void processIncomingRow(int recordIndex) throws IOException {
+    try {
+      Preconditions.checkNotNull(manifestWriter);
+      final byte[] metaInfoBytes = inputDatafiles.get(recordIndex);
+      final IcebergMetadataInformation icebergMetadataInformation = IcebergSerDe.deserializeFromByteArray(metaInfoBytes);
+      final IcebergMetadataInformation.IcebergMetadataFileType metadataFileType = icebergMetadataInformation.getIcebergMetadataFileType();
+      switch (metadataFileType) {
+        case ADD_DATAFILE:
+          final DataFile dataFile = IcebergSerDe.deserializeDataFile(icebergMetadataInformation.getIcebergMetadataFileByte());
+          addDataFile(dataFile);
+          currentNumDataFileAdded++;
+          break;
+        case DELETE_DATAFILE:
+          deletedDataFiles.put(IcebergSerDe.deserializeDataFile(icebergMetadataInformation.getIcebergMetadataFileByte()), metaInfoBytes);
+          break;
+        default:
+          throw new IOException("Unsupported File type - " + metadataFileType);
+      }
+    } catch (IOException ioe) {
+      throw ioe;
+    } catch (Exception e) {
+      throw new IOException(e);
+    }
+  }
+
+  protected void addDataFile(DataFile dataFile) {
+    IcebergPartitionData ipd = IcebergPartitionData.fromStructLike(getPartitionSpec(writer.getOptions()), dataFile.partition());
+    if (writer.getOptions().isReadSignatureSupport()) {
+      partitionDataInCurrentManifest.add(ipd);
+    }
+    manifestWriter.add(dataFile);
+  }
+
+  public void processDeletedFiles(BiConsumer<DataFile, byte[]> processLogic) {
+    deletedDataFiles.forEach(processLogic);
+    deletedDataFiles.clear();
+  }
+
+  public long length() {
+    Preconditions.checkNotNull(manifestWriter);
+    return manifestWriter.length();
+  }
+
+  public boolean hasReachedMaxLen() {
+    return (length() + DataFileConstants.DEFAULT_SYNC_INTERVAL >= TableProperties.MANIFEST_TARGET_SIZE_BYTES_DEFAULT)
+            || (currentNumDataFileAdded >= DATAFILES_PER_MANIFEST_THRESHOLD);
+  }
+
+  public Optional<ManifestFile> write() throws IOException {
+    if (currentNumDataFileAdded == 0) {
+      deleteRunningManifestFile();
+      return Optional.empty();
+    }
+    manifestWriter.close();
+    return Optional.of(manifestWriter.toManifestFile());
+  }
+
+  public byte[] getWrittenSchema() {
+    return schema;
+  }
+
+  PartitionSpec getPartitionSpec(WriterOptions writerOptions) {
+    List<String> partitionColumns = writerOptions.getIcebergTableProps().getPartitionColumnNames();
+    BatchSchema batchSchema = writerOptions.getIcebergTableProps().getFullSchema();
+
+    Schema icebergSchema = null;
+    if (writerOptions.getExtendedProperty() != null) {
+      icebergSchema = getIcebergSchema(writerOptions.getExtendedProperty(), batchSchema, writerOptions.getIcebergTableProps().getTableName());
     }
 
-    protected ManifestWritesHelper(EasyWriter writer, IcebergFormatConfig formatConfig) {
-        this.writer = writer;
-        this.formatConfig = formatConfig;
-        this.schema = writer.getOptions().getIcebergTableProps().getFullSchema().serialize();
-    }
-
-    public void setIncoming(VectorAccessible incoming) {
-        inputDatafiles = (VarBinaryVector) getVectorFromSchemaPath(incoming, RecordWriter.ICEBERG_METADATA_COLUMN);
-    }
-
-    public void startNewWriter() {
-        this.currentNumDataFileAdded = 0;
-        final WriterOptions writerOptions = writer.getOptions();
-        final String baseMetadataLocation = writerOptions.getIcebergTableProps().getTableLocation() + Path.SEPARATOR + ICEBERG_METADATA_FOLDER;
-        final FileSystemPlugin<?> plugin = writer.getFormatPlugin().getFsPlugin();
-        final PartitionSpec partitionSpec = getPartitionSpec(writer.getOptions());
-        this.partitionSpecId = Optional.of(partitionSpec.specId());
-        final String icebergManifestFileExt = "." + formatConfig.outputExtension;
-        final DremioFileIO dremioFileIO = new DremioFileIO(plugin.getFsConfCopy());
-        final OutputFile manifestLocation = dremioFileIO.newOutputFile(baseMetadataLocation + Path.SEPARATOR + UUID.randomUUID() + icebergManifestFileExt);
-        this.manifestWriter = ManifestFiles.write(partitionSpec, manifestLocation);
-    }
-
-    public void processIncomingRow(int recordIndex) throws IOException {
-        try {
-            Preconditions.checkNotNull(manifestWriter);
-            final byte[] metaInfoBytes = inputDatafiles.get(recordIndex);
-            final IcebergMetadataInformation icebergMetadataInformation = IcebergSerDe.deserializeFromByteArray(metaInfoBytes);
-            final IcebergMetadataInformation.IcebergMetadataFileType metadataFileType = icebergMetadataInformation.getIcebergMetadataFileType();
-            switch (metadataFileType) {
-                case ADD_DATAFILE:
-                    final DataFile dataFile = IcebergSerDe.deserializeDataFile(icebergMetadataInformation.getIcebergMetadataFileByte());
-                    addDataFile(dataFile);
-                    currentNumDataFileAdded++;
-                    break;
-                case DELETE_DATAFILE:
-                    deletedDataFiles.put(IcebergSerDe.deserializeDataFile(icebergMetadataInformation.getIcebergMetadataFileByte()), metaInfoBytes);
-                    break;
-                default:
-                    throw new IOException("Unsupported File type - " + metadataFileType);
-            }
-        } catch (IOException ioe) {
-            throw ioe;
-        } catch (Exception e) {
-            throw new IOException(e);
-        }
-    }
-
-    protected void addDataFile(DataFile dataFile) {
-        manifestWriter.add(dataFile);
-    }
-
-    public void processDeletedFiles(BiConsumer<DataFile, byte[]> processLogic) {
-        deletedDataFiles.forEach(processLogic);
-        deletedDataFiles.clear();
-    }
-
-    public long length() {
-        Preconditions.checkNotNull(manifestWriter);
-        return manifestWriter.length();
-    }
-
-    public boolean hasReachedMaxLen() {
-        return length() + DataFileConstants.DEFAULT_SYNC_INTERVAL >= TableProperties.MANIFEST_TARGET_SIZE_BYTES_DEFAULT;
-    }
-
-    public Optional<ManifestFile> write() throws IOException {
-        if (currentNumDataFileAdded == 0) {
-            deleteRunningManifestFile();
-            return Optional.empty();
-        }
-        manifestWriter.close();
-        return Optional.of(manifestWriter.toManifestFile());
-    }
-
-    public byte[] getWrittenSchema() {
-        return schema;
-    }
-
-    protected PartitionSpec getPartitionSpec(WriterOptions writerOptions) {
-        List<String> partitionColumns = writerOptions.getIcebergTableProps().getPartitionColumnNames();
-        BatchSchema batchSchema = writerOptions.getIcebergTableProps().getFullSchema();
-
-        Schema icebergSchema = null;
-        if (writerOptions.getExtendedProperty()!=null) {
-            icebergSchema = getIcebergSchema(writerOptions.getExtendedProperty(), batchSchema);
-        }
-
-        return IcebergUtils.getIcebergPartitionSpec(batchSchema, partitionColumns, icebergSchema);
+    return IcebergUtils.getIcebergPartitionSpec(batchSchema, partitionColumns, icebergSchema);
         /*
          TODO: currently we don't support partition spec update for by default spec ID will be 0. in future if
                we start supporting partition spec id. then Id must be inherited from data files(input to this writer)
          */
-    }
+  }
 
-    protected Schema getIcebergSchema(ByteString extendedProperty, BatchSchema batchSchema) {
-        try {
-            IcebergProtobuf.IcebergDatasetXAttr icebergDatasetXAttr = LegacyProtobufSerializer.parseFrom(IcebergProtobuf.IcebergDatasetXAttr.PARSER,
-                    extendedProperty.toByteArray());
-            List<IcebergProtobuf.IcebergSchemaField> icebergColumnIDs = icebergDatasetXAttr.getColumnIdsList();
-            Map<String, Integer> icebergColumns = new HashMap<>();
-            icebergColumnIDs.forEach(field -> icebergColumns.put(field.getSchemaPath(), field.getId()));
-            CaseInsensitiveImmutableBiMap<Integer> icebergColumnIDMap = newImmutableMap(icebergColumns);
-            if (icebergColumnIDMap!=null && icebergColumnIDMap.size() > 0) {
-                FieldIdBroker.SeededFieldIdBroker fieldIdBroker = new FieldIdBroker.SeededFieldIdBroker(icebergColumnIDMap);
-                return SchemaConverter.toIcebergSchema(batchSchema, fieldIdBroker);
-            } else {
-                return null;
-            }
-        } catch (InvalidProtocolBufferException e) {
-            throw new RuntimeException("Could not deserialize Parquet dataset info", e);
-        }
+  protected Schema getIcebergSchema(ByteString extendedProperty, BatchSchema batchSchema, String tableName) {
+    try {
+      IcebergProtobuf.IcebergDatasetXAttr icebergDatasetXAttr = LegacyProtobufSerializer.parseFrom(IcebergProtobuf.IcebergDatasetXAttr.PARSER,
+              extendedProperty.toByteArray());
+      List<IcebergProtobuf.IcebergSchemaField> icebergColumnIDs = icebergDatasetXAttr.getColumnIdsList();
+      Map<String, Integer> icebergColumns = new HashMap<>();
+      icebergColumnIDs.forEach(field -> icebergColumns.put(field.getSchemaPath(), field.getId()));
+      CaseInsensitiveImmutableBiMap<Integer> icebergColumnIDMap = newImmutableMap(icebergColumns);
+      if (icebergColumnIDMap != null && icebergColumnIDMap.size() > 0) {
+        FieldIdBroker.SeededFieldIdBroker fieldIdBroker = new FieldIdBroker.SeededFieldIdBroker(icebergColumnIDMap);
+        SchemaConverter schemaConverter = new SchemaConverter(tableName);
+        return schemaConverter.toIcebergSchema(batchSchema, fieldIdBroker);
+      } else {
+        return null;
+      }
+    } catch (InvalidProtocolBufferException e) {
+      throw new RuntimeException("Could not deserialize Parquet dataset info", e);
     }
+  }
 
-    protected void deleteRunningManifestFile() {
-        try {
-            if (manifestWriter == null) {
-                return;
-            }
-            manifestWriter.close();
-            ManifestFile manifestFile = manifestWriter.toManifestFile();
-            logger.debug("Removing {} as it'll be re-written with a new schema", manifestFile.path());
-            String path = Path.getContainerSpecificRelativePath(Path.of(manifestFile.path()));
-            Files.deleteIfExists(Paths.get(path));
-            manifestWriter = null;
-        } catch (Exception e) {
-            logger.warn("Error while closing stale manifest", e);
-        }
+  protected void deleteRunningManifestFile() {
+    try {
+      if (manifestWriter == null) {
+        return;
+      }
+      manifestWriter.close();
+      ManifestFile manifestFile = manifestWriter.toManifestFile();
+      logger.debug("Removing {} as it'll be re-written with a new schema", manifestFile.path());
+      String path = Path.getContainerSpecificRelativePath(Path.of(manifestFile.path()));
+      Files.deleteIfExists(Paths.get(path));
+      manifestWriter = null;
+    } catch (Exception e) {
+      logger.warn("Error while closing stale manifest", e);
     }
+  }
+
+  Set<IcebergPartitionData> partitionDataInCurrentManifest() {
+    return partitionDataInCurrentManifest;
+  }
 }
